--- a/git/pom.xml
+++ b/git/pom.xml
@@ -3,4 +3,17 @@
   <groupId>org.anderes.playground</groupId>
   <artifactId>git</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.1</version>
+      <configuration>
+        <source>1.7</source>
+        <target>1.7</target>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
